# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2017-05-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix erlang:get_stacktrace/0 usage with Erlang/OTP 20.0
    * Use maps in cloudi_core call paths that impact performance
    * Update key2value and keys1value

2017-05-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update quickrand

2017-05-15 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Using the CloudI API functions send_sync or recv_async during the
      service's initialization previously returned an error, but will now
      cause the service to crash, to pursue fail-fast operation and to keep
      the effect the same for both internal and external services
      

2017-05-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update msgpack

2017-05-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Removed the internal cloudi_core_i_logger:current_function/0 function
      since the FUNCTION_NAME macro now exists

2017-05-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fixes for Erlang/OTP 20.0 support
        * epgsql_wg support was removed from cloudi_service_db_pgsql due to
          being unmaintained and using gen_fsm
          (cloudi_service_db_pgsql now uses semiocast as the default)
        * The cloudi executable now uses a pid file to block during stop and
          provides the OS process name as "CloudI"
        * External service source code switched from gen_fsm to gen_statem
        * Update quickrand
    * Fix OCaml CloudI API usage with Erlang/OTP 20.0
      (Erlang binary term format parsing in OCaml had an atom parsing bug
       for pids and other types that store an atom)
    * Updated the cloudi executable used in the Erlang examples

2017-04-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix chroot and directory service configuration options
      validation of absolute paths
    * Add libtool/autoconf version check