@@ -4,12 +4,13 @@
 %%%------------------------------------------------------------------------
 %%% @doc
 %%% ==CloudI Key/Value Data Access for RequestInfo==
-%%% Keys are unique in both the list and dict key_values data result.
+%%% Keys are unique in any of the underlying representations.
+%%% Used by the cloudi_request_info module.
 %%% @end
 %%%
 %%% BSD LICENSE
 %%% 
-%%% Copyright (c) 2014-2015, Michael Truog <mjtruog at gmail dot com>
+%%% Copyright (c) 2014-2017, Michael Truog <mjtruog at gmail dot com>
 %%% All rights reserved.
 %%% 
 %%% Redistribution and use in source and binary forms, with or without
@@ -44,8 +45,8 @@
 %%% DAMAGE.
 %%%
 %%% @author Michael Truog <mjtruog [at] gmail (dot) com>
-%%% @copyright 2014-2015 Michael Truog
-%%% @version 1.5.1 {@date} {@time}
+%%% @copyright 2014-2017 Michael Truog
+%%% @version 1.7.1 {@date} {@time}
 %%%------------------------------------------------------------------------
 
 -module(cloudi_key_value).
@@ -56,15 +57,15 @@
          find/2,
          store/3,
          to_list/1,
-         to_dict/1]).
-
--include("cloudi_core_i_constants.hrl").
+         to_dict/1,
+         to_map/1]).
 
 % used for accessing RequestInfo data
 -type key() :: binary() | string() | atom().
 -type value() :: binary() | iolist() | any().
--type key_values(Key, Value) :: list({Key, Value}) |
-                                dict_proxy(Key, Value).
+-type key_values(Key, Value) :: #{Key := Value} |
+                                list({Key, Value}) |
+                                dict:dict(Key, Value).
 -type key_values() :: key_values(key(), value()).
 -export_type([key/0,
               value/0,
@@ -78,9 +79,6 @@
 %%-------------------------------------------------------------------------
 %% @doc
 %% ===Generic key/value erase.===
-%% RequestInfo's key/value result from request_info_key_value_parse/1
-%% can be used here to erase request meta-data while encapsulating
-%% the data structure used for the lookup.
 %% @end
 %%-------------------------------------------------------------------------
 
@@ -88,6 +86,9 @@
             KeyValues :: key_values()) ->
     NewKeyValues :: key_values().
 
+erase(Key, KeyValues)
+    when is_map(KeyValues) ->
+    maps:remove(Key, KeyValues);
 erase(Key, KeyValues)
     when is_list(KeyValues) ->
     lists:keydelete(Key, 1, KeyValues);
@@ -97,9 +98,6 @@ erase(Key, KeyValues) ->
 %%-------------------------------------------------------------------------
 %% @doc
 %% ===Generic key/value find.===
-%% RequestInfo's key/value result from request_info_key_value_parse/1
-%% can be used here to access the request meta-data while encapsulating
-%% the data structure used for the lookup.
 %% @end
 %%-------------------------------------------------------------------------
 
@@ -108,6 +106,9 @@ erase(Key, KeyValues) ->
     {ok, Value :: value()} |
     error.
 
+find(Key, KeyValues)
+    when is_map(KeyValues) ->
+    maps:find(Key, KeyValues);
 find(Key, KeyValues)
     when is_list(KeyValues) ->
     case lists:keyfind(Key, 1, KeyValues) of
@@ -122,9 +123,6 @@ find(Key, KeyValues) ->
 %%-------------------------------------------------------------------------
 %% @doc
 %% ===Generic key/value store.===
-%% RequestInfo's key/value result from request_info_key_value_parse/1
-%% can be used here to store request meta-data while encapsulating
-%% the data structure used for the lookup.
 %% @end
 %%-------------------------------------------------------------------------
 
@@ -134,6 +132,9 @@ find(Key, KeyValues) ->
     NewKeyValues :: key_values().
 
 store(Key, Value, KeyValues)
+    when is_map(KeyValues) ->
+    maps:put(Key, Value, KeyValues);
+store(Key, Value, KeyValues)
     when is_list(KeyValues) ->
     lists:keystore(Key, 1, KeyValues, {Key, Value});
 store(Key, Value, KeyValues) ->
@@ -142,15 +143,15 @@ store(Key, Value, KeyValues) ->
 %%-------------------------------------------------------------------------
 %% @doc
 %% ===Generic key/value to_list.===
-%% RequestInfo's key/value result from request_info_key_value_parse/1
-%% can be used here to erase request meta-data while encapsulating
-%% the data structure used for the lookup.
 %% @end
 %%-------------------------------------------------------------------------
 
 -spec to_list(KeyValues :: key_values()) ->
     list({key(), value()}).
 
+to_list(KeyValues)
+    when is_map(KeyValues) ->
+    maps:to_list(KeyValues);
 to_list(KeyValues)
     when is_list(KeyValues) ->
     KeyValues;
@@ -160,15 +161,17 @@ to_list(KeyValues) ->
 %%-------------------------------------------------------------------------
 %% @doc
 %% ===Generic key/value to_dict.===
-%% RequestInfo's key/value result from request_info_key_value_parse/1
-%% can be used here to erase request meta-data while encapsulating
-%% the data structure used for the lookup.
 %% @end
 %%-------------------------------------------------------------------------
 
 -spec to_dict(KeyValues :: key_values()) ->
-    dict_proxy(key(), value()).
+    dict:dict(key(), value()).
 
+to_dict(KeyValues)
+    when is_map(KeyValues) ->
+    maps:fold(fun(K, V, D) ->
+        dict:store(K, V, D)
+    end, dict:new(), KeyValues);
 to_dict(KeyValues)
     when is_list(KeyValues) ->
     lists:foldl(fun({K, V}, D) ->
@@ -176,4 +179,26 @@ to_dict(KeyValues)
     end, dict:new(), KeyValues);
 to_dict(KeyValues) ->
     KeyValues.
+
+%%-------------------------------------------------------------------------
+%% @doc
+%% ===Generic key/value to_map.===
+%% @end
+%%-------------------------------------------------------------------------
+
+-spec to_map(KeyValues :: key_values()) ->
+    #{key() := value()}.
+
+to_map(KeyValues)
+    when is_map(KeyValues) ->
+    KeyValues;
+to_map(KeyValues)
+    when is_list(KeyValues) ->
+    lists:foldl(fun({K, V}, M) ->
+        maps:put(K, V, M)
+    end, #{}, KeyValues);
+to_map(KeyValues) ->
+    dict:fold(fun(K, V, M) ->
+        maps:put(K, V, M)
+    end, #{}, KeyValues).
 
