@@ -44,7 +44,7 @@
 %%%
 %%% @author Michael Truog <mjtruog [at] gmail (dot) com>
 %%% @copyright 2011-2017 Michael Truog
-%%% @version 1.6.1 {@date} {@time}
+%%% @version 1.7.1 {@date} {@time}
 %%%------------------------------------------------------------------------
 
 -module(cloudi_service_http_req).
@@ -77,7 +77,7 @@ cloudi_service_handle_request(_Type, _Name, _Pattern, _RequestInfo, Request,
                               _Timeout, _Priority, _TransId, _Pid,
                               State, _Dispatcher) ->
     HttpQS = cloudi_request_info:key_value_parse(Request),
-    Response = case dict:find(<<"value">>, HttpQS) of
+    Response = case cloudi_key_value:find(<<"value">>, HttpQS) of
         {ok, RawValue} ->
             Value = case RawValue of
                 [V | _] ->
