@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2017-05-24 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Use maps in cloudi_core helper modules
+
 2017-05-23 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Fix erlang:get_stacktrace/0 usage with Erlang/OTP 20.0
